--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -42,18 +42,16 @@
                 <div class="card-footer d-flex flex-row flex-wrap justify-content-center"
                     style="background-color: #33a5db">
                     <div>
-                        <img class="rounded-circle profile" alt="Samuel Salazar" title="Samuel Salazar"
-                            src="/img/people/fotoSamuelSalazar.jpg">
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <a href="https://slinan.github.io/" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Santiago Liñán" title="Santiago Liñán"
-                                src="/img/people/fotoSantiagoLinan.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <img class="rounded-circle profile" alt="Valeria Vanegas" title="Valeria Vanegas"
-                            src="/img/people/valeria.jpg">
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                 </div>
             </div>
@@ -82,49 +80,16 @@
                 <div class="card-footer d-flex flex-row flex-wrap justify-content-center"
                     style="background-color: #33a5db">
                     <div>
-                        <a href="http://caev03.github.io" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Camilo Escobar-Velásquez"
-                                title="Camilo Escobar-Velásquez" src="/img/people/fotoCamiloEscobarV.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <img class="rounded-circle profile" alt="Michael Osorio" title="Michael Osorio"
-                            src="/img/people/michaelOsorio.jpg">
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <img class="rounded-circle profile" alt="Diego Riveros" title="Diego Riveros"
-                            src="/img/people/avatar2.png">
-                    </div>
-                    <div>
-                        <a href="https://profesores.virtual.uniandes.edu.co/mlinaresv/en/inicio-en/"
-                            style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Mario Linares-Vásquez"
-                                title="Mario Linares-Vásquez" src="/img/people/fotoMarioLinaresV.jpg">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="http://www.inf.usi.ch/faculty/bavota/" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Gabriele Bavota" title="Gabriele Bavota"
-                                src="/img/people/fotoGabrieleBavota.jpg">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="http://www.christophervendome.com" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Christopher Vendome" title="Christopher Vendome"
-                                src="/img/people/fotoChristopherV.jpg">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="http://www.ing.unisannio.it/mdipenta/" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Massimiliano Di Penta"
-                                title="Massimiliano Di Penta" src="/img/people/dipenta.jpg">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="http://www.cs.wm.edu/~denys/index.html" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Denys Poshyvanyk" title="Denys Poshyvanyk"
-                                src="/img/people/fotoDenys.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                 </div>
             </div>
@@ -157,48 +122,16 @@
                 <div class="card-footer d-flex flex-row flex-wrap justify-content-center"
                     style="background-color: #33a5db">
                     <div>
-                        <a href="https://profesores.virtual.uniandes.edu.co/mlinaresv/en/inicio-en/"
-                            style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Mario Linares-Vásquez"
-                                title="Mario Linares-Vásquez" src="/img/people/fotoMarioLinaresV.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <a href="http://www.inf.usi.ch/faculty/bavota/" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Gabriele Bavota" title="Gabriele Bavota"
-                                src="/img/people/fotoGabrieleBavota.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <a href="https://profesores.virtual.uniandes.edu.co/sarueda/en/inicio-en/"
-                            style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Sandra Rueda" title="Sandra Rueda"
-                                src="/img/people/fotoSandraRueda.jpg">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="https://www.inf.usi.ch/phd/mazuerarozo/" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Alejandro Mazuera-Rozo"
-                                title="Alejandro Mazuera-Rozo" src="/img/people/fotoAlejandroMazuera.jpg">
-                        </a>
-                    </div>
-                    <div>
-                        <img class="rounded-circle profile" alt="Laura Bello (Alumni)" title="Laura Bello (Alumni)"
-                            src="/img/people/fotoLauraBello.jpg">
-                    </div>
-                    <div>
-                        <img class="rounded-circle profile" alt="Camilo Ortiz-Casas" title="Camilo Ortiz-Casas"
-                            src="/img/people/avatar2.png">
-                    </div>
-                    <div>
-                        <img class="rounded-circle profile" alt="Santiago Saenz" title="Santiago Saenz"
-                            src="/img/people/fotoSantiagoSaenz.jpg">
-                    </div>
-                    <div>
-                        <a href="http://caev03.github.io" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Camilo Escobar-Velásquez"
-                                title="Camilo Escobar-Velásquez" src="/img/people/fotoCamiloEscobarV.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                 </div>
             </div>
@@ -226,21 +159,16 @@
                 <div class="card-footer d-flex flex-row flex-wrap justify-content-center"
                     style="background-color: #33a5db">
                     <div>
-                        <a href="http://caev03.github.io" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Camilo Escobar-Velásquez"
-                                title="Camilo Escobar-Velásquez" src="/img/people/fotoCamiloEscobarV.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <img class="rounded-circle profile" alt="Michael Osorio" title="Michael Osorio"
-                            src="/img/people/michaelOsorio.jpg">
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <a href="https://profesores.virtual.uniandes.edu.co/mlinaresv/en/inicio-en/"
-                            style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Mario Linares-Vásquez"
-                                title="Mario Linares-Vásquez" src="/img/people/fotoMarioLinaresV.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                 </div>
             </div>
@@ -274,43 +202,16 @@
                 <div class="card-footer d-flex flex-row flex-wrap justify-content-center"
                     style="background-color: #33a5db">
                     <div>
-                        <a href="https://profesores.virtual.uniandes.edu.co/mlinaresv/en/inicio-en/"
-                            style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Mario Linares-Vásquez"
-                                title="Mario Linares-Vásquez" src="/img/people/fotoMarioLinaresV.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <a href="http://caev03.github.io" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Camilo Escobar-Velásquez"
-                                title="Camilo Escobar-Velásquez" src="/img/people/fotoCamiloEscobarV.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <img class="rounded-circle profile" alt="Michael Osorio" title="Michael Osorio"
-                            src="/img/people/michaelOsorio.jpg">
-                    </div>
-                    <div>
-                        <img class="rounded-circle profile" alt="Diego Rodríguez-Baquero"
-                            title="Diego Rodríguez-Baquero" src="/img/people/fotoDiegoRodriguez.jpg">
-                    </div>
-                    <div>
-                        <a href="http://www.inf.usi.ch/faculty/bavota/" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Gabriele Bavota" title="Gabriele Bavota"
-                                src="/img/people/fotoGabrieleBavota.jpg">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="http://www.ing.unisannio.it/mdipenta/" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Massimiliano Di Penta"
-                                title="Massimiliano Di Penta" src="/img/people/dipenta.jpg">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="http://www.cs.wm.edu/~denys/index.html" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Denys Poshyvanyk" title="Denys Poshyvanyk"
-                                src="/img/people/fotoDenys.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                 </div>
             </div>
@@ -339,32 +240,16 @@
                 <div class="card-footer d-flex flex-row flex-wrap justify-content-center"
                     style="background-color: #33a5db">
                     <div>
-                        <img class="rounded-circle profile" alt="Maria Arevalo" title="Maria Arevalo"
-                            src="/img/people/fotoMariaArevalo.jpg">
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <a href="http://caev03.github.io" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Camilo Escobar-Velásquez"
-                                title="Camilo Escobar-Velásquez" src="/img/people/fotoCamiloEscobarV.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                     <div>
-                        <img class="rounded-circle profile" alt="Juan Manuel Dominguez" title="Juan Manuel Dominguez"
-                            src="/img/people/avatar2.png">
-                    </div>
-                    <div>
-                        <img class="rounded-circle profile" alt="Andrés Lopez" title="Andrés Lopez"
-                            src="/img/people/avatar2.png">
-                    </div>
-                    <div>
-                        <img class="rounded-circle profile" alt="Laura Bello (Alumni)" title="Laura Bello (Alumni)"
-                            src="/img/people/fotoLauraBello.jpg">
-                    </div>
-                    <div>
-                        <a href="https://slinan.github.io/" style="text-decoration: none">
-                            <img class="rounded-circle profile" alt="Santiago Liñán" title="Santiago Liñán"
-                                src="/img/people/fotoSantiagoLinan.jpg">
-                        </a>
+                        <img class="rounded-circle profile" alt="Mohamed Wiem Mkaouer" title="Mohamed Wiem Mkaouer"
+                            src="/author/mohamed-wiem-mkaouer/avatar_hu6ff10dbe48222c87eaa06aa61a713322_27020_270x270_fill_q75_lanczos_center.jpg">
                     </div>
                 </div>
             </div>
