--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -11,6 +11,17 @@
     color: white;
     margin-top: 0px;
 }
+.profile {
+    object-fit: cover;
+}
+.rounded-circle {
+    border-radius: 50%!important;
+}
+.card .profile {
+    height: 40px;
+    width: 40px;
+    margin: 3px;
+}
 </style>
 
 <div class="container body-container" style="padding-top: 20px">
