--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -22,6 +22,9 @@
     width: 40px;
     margin: 3px;
 }
+#project .card-columns{
+    column-count: 2 !important;
+}
 </style>
 
 <div class="container body-container" style="padding-top: 20px">
