added styling for banner

--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -25,6 +25,10 @@
 #project .card-columns{
     column-count: 2 !important;
 }
+.project-image{
+    width: 100%;
+    margin-bottom: 10px;
+}
 </style>
 
 <div class="container body-container" style="padding-top: 20px">
@@ -43,7 +47,7 @@
                 <div class="card-body">
                     <div style="width: 100%; text-align: center">
                         
-                        <img class="project-image" src="/img/project-images/zilicio.png"
+                        <img class="project-image" src="https://media.istockphoto.com/vectors/software-engineering-banner-and-icons-vector-id636526232?k=20&m=636526232&s=170667a&w=0&h=Gr4lG-mwzctLhPganTlK5SFaEKKXqjnmPQbWWavBLFA="
                             alt="Zilicio: An Automation Framework for Rapid Native Mobile Application Development">
                     </div>
                     <div class="card-text">
@@ -76,7 +80,7 @@
                 <div class="card-body">
                     <div style="width: 100%; text-align: center">
                         
-                        <img class="project-image" src="/img/project-images/closed.png"
+                        <img class="project-image" src="https://media.istockphoto.com/vectors/software-engineering-banner-and-icons-vector-id636526232?k=20&m=636526232&s=170667a&w=0&h=Gr4lG-mwzctLhPganTlK5SFaEKKXqjnmPQbWWavBLFA="
                             alt="Automatic Analysis of Closed-Source Mobile Apps to support Software Engineering Tasks">
                     
                     </div>
@@ -123,7 +127,7 @@
                 <div class="card-body">
                     <div style="width: 100%; text-align: center">
                         
-                        <img class="project-image" src="/img/project-images/vulnera.png"
+                        <img class="project-image" src="https://media.istockphoto.com/vectors/software-engineering-banner-and-icons-vector-id636526232?k=20&m=636526232&s=170667a&w=0&h=Gr4lG-mwzctLhPganTlK5SFaEKKXqjnmPQbWWavBLFA="
                             alt="Security Vulnerabilities in Mobile Apps">
                         
                     </div>
@@ -156,7 +160,7 @@
                 <div class="card-body">
                     <div style="width: 100%; text-align: center">
                         
-                        <img class="project-image" src="/img/project-images/event.png"
+                        <img class="project-image" src="https://media.istockphoto.com/vectors/software-engineering-banner-and-icons-vector-id636526232?k=20&m=636526232&s=170667a&w=0&h=Gr4lG-mwzctLhPganTlK5SFaEKKXqjnmPQbWWavBLFA="
                             alt="Eventual Connectivity on Android Apps">
                         
                     </div>
@@ -202,7 +206,7 @@
                 <div class="card-body">
                     <div style="width: 100%; text-align: center">
                         
-                        <img class="project-image" src="/img/project-images/mutation.png" alt="Mutation Testing">
+                        <img class="project-image" src="https://media.istockphoto.com/vectors/software-engineering-banner-and-icons-vector-id636526232?k=20&m=636526232&s=170667a&w=0&h=Gr4lG-mwzctLhPganTlK5SFaEKKXqjnmPQbWWavBLFA=" alt="Mutation Testing">
                         
                     </div>
                     <div class="card-text">
@@ -236,7 +240,7 @@
                 <div class="card-body">
                     <div style="width: 100%; text-align: center">
                         
-                        <img class="project-image" src="/img/project-images/rip.png"
+                        <img class="project-image" src="https://media.istockphoto.com/vectors/software-engineering-banner-and-icons-vector-id636526232?k=20&m=636526232&s=170667a&w=0&h=Gr4lG-mwzctLhPganTlK5SFaEKKXqjnmPQbWWavBLFA="
                             alt="Multi Model Testing of Android Apps">
                         
                     </div>
