--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -364,7 +364,7 @@
   <script>
     function readTextFile() {
     var rawFile = new XMLHttpRequest();
-    rawFile.open("GET", "files/project.json", true);
+    rawFile.open("GET", "/files/project.json", true);
     rawFile.onreadystatechange = function() {
         if (rawFile.readyState === 4) {
         var allText = rawFile.responseText;
