--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -378,11 +378,11 @@
     var source = document.getElementById("entry-template").innerHTML;
     var template = Handlebars.compile(source);
     var context = new XMLHttpRequest();
-                    client.open('GET', '"/files/project.json');
-                    client.onreadystatechange = function() {
-                    alert(client.responseText);
+                    context.open('GET', '"/files/project.json');
+                    context.onreadystatechange = function() {
+                    // alert(context.responseText);
                     }
-                    client.send();
+                    context.send();
     console.log(context);
     var html = template(context);
     }
