adding JSON parser

--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -383,7 +383,8 @@
                     // alert(context.responseText);
                     }
                     context.send();
-    console.log(context);
+    context = JSON.parse(context.response);
+                    console.log(context);
     var html = template(context);
     }
 
