added template script

--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -278,6 +278,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 <script src="/files/swag.js"></script>
+<script src="/files/project-template.js"></script>
 
 
   <script>
