--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -301,8 +301,8 @@
     var context = new XMLHttpRequest();
     context.responseType = 'json';
     context.open('GET', "/files/project.json",true);
-    context.onload = function(e) {
-    if (this.status == 200) {
+    context.onreadystatechange = function(e) {
+        if (context.readyState === 4) {
         console.log('response', this.response); // JSON response 
         var html = template(context);
         console.log(html)
