--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -296,18 +296,13 @@
 
     function initData(){
     Swag.registerHelpers(Handlebars);
-    // var source = document.getElementById("entry-template").innerHTML;
-    // var template = 
     var context = new XMLHttpRequest();
     context.responseType = 'json';
     context.open('GET', "/files/project.json",true);
-    context.onreadystatechange = function(e) {
-        if (context.readyState === 4) {
-        console.log('response', this.response); // JSON response 
-        var html = template(context);
-        console.log(html)
-    }
-    }; 
+    context.send();
+    console.log(context);
+    var jsonData = context.response;                
+    console.log(jsonData); 
     }
 
     initData();
